[project]
name = "gerg-type-validation"
version = "0.1.0"
description = ""
authors = [
    {name = "Alec Krueger", email = "Alecmkrueger@tamu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
notebook = "^7.4.3"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
